[package]
name = "auth_signers"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hs256_signer"
path = "src/hs256_signer.rs"

[[bin]]
name = "rs256_signer"
path = "src/rs256_signer.rs"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1"
auth_middleware = {git="https://github.com/Austin-rgb/auth_middleware.git"}
